--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h2>Download Full Website</h2>
         <input type="text" id="website-url" placeholder="Enter website URL">
-        <button onclick="fetchWebsite()">Download</button>
+        <button>Download</button>
         <p id="status"></p>
     </div>
     <script src="script.js"></script>
